--- a/MyWebApp/Jenkinsfile
+++ b/MyWebApp/Jenkinsfile
@@ -1,72 +1,41 @@
 node {
+def mvnHome = tool 'Maven3'
 
-    def mvnHome = tool 'Maven3'
-    stage ("checkout") {
-        copy code here which you generated from step #6
-    }
+stage ('Checkout') {
 
-    stage ('build') {
-    sh "${mvnHome}/bin/mvn clean install -f MyWebApp/pom.xml"
-    }
-
-    stage ('Code Quality scan') {
-       withSonarQubeEnv('SonarQube') {
-       sh "${mvnHome}/bin/mvn -f MyWebApp/pom.xml sonar:sonar"
-        }
-   }
-   
-   stage ('Code coverage') {
-       jacoco()
-   }
-   stage ('Nexus upload') 
-    {
-        nexusArtifactUploader(
-        nexusVersion: 'nexus3',
-        protocol: 'http',
-        nexusUrl: 'nexus_url:8081',
-        groupId: 'myGroupId',
-        version: '1.0-SNAPSHOT',
-        repository: 'maven-snapshots',
-        credentialsId: '2c293828-9509-49b4-a6e7-77f3ceae7b39',
-        artifacts: [
-            [artifactId: 'MyWebApp',
-             classifier: '',
-             file: 'MyWebApp/target/MyWebApp.war',
-             type: 'war']
-        ]
-     )
-    }
-    
-   stage ('DEV Deploy')
-    {
-      echo "deploying to DEV Env "
-      sh 'sudo cp /var/lib/jenkins/workspace/$JOB_NAME/MyWebApp/target/MyWebApp.war /var/lib/tomcat8/webapps'
-    }
-
-   stage ('DEV Approve')
-      {
-            echo "Taking approval from DEV Manager"
-               
-            timeout(time: 7, unit: 'DAYS') {
-            input message: 'Do you want to deploy?', submitter: 'admin'
-            }
-     }
-  stage ('Slack notification') 
-  {
-    slackSend(channel:'channel-name', message: "Job is successful, here is the info -  Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]' (${env.BUILD_URL})")
- 
-   }
- 
-stage ('QA Deploy')
-{
-echo "deploying to QA Env "
-sh 'sudo cp /var/lib/jenkins/workspace/$JOB_NAME/MyWebApp/target/MyWebApp.war /var/lib/tomcat8/webapps'
-
+checkout([$class: 'GitSCM', branches: [[name: '*/master']], doGenerateSubmoduleConfigurations: false, extensions: [], submoduleCfg: [], userRemoteConfigs: [[credentialsId: '97d85bee-a066-4992-85df-749a26f3e19d', url: 'https://github.com/chimajdev/simplejavaproject']]])
 }
-stage ('QA Approve')
-{
-echo "Taking approval from QA manager"
 
+stage ('Build') {
+sh "${mvnHome}/bin/mvn clean install -f MyWebApp/pom.xml"
+}
+
+
+stage ('Code quality scan') {
+withSonarQubeEnv('SonarQube') {
+sh "${mvnHome}/bin/mvn sonar:sonar -f MyWebApp/pom.xml"
+   }
+}
+
+
+stage ('DEV Deploy') {
+echo "deploying to DEV tomcat "
+sh 'sudo cp /var/lib/jenkins/workspace/$JOB_NAME/MyWebApp/target/MyWebApp.war /var/lib/tomcat8/webapps'
+}
+stage ('DEV Approve') {
+echo "Taking approval from DEV"
 timeout(time: 7, unit: 'DAYS') {
-input message: 'Do you want to proceed to PROD?', submitter: 'admin,manager_userid'
+input message: 'Do you want to deploy?', submitter: 'admin'
+     }
+
+ }
+
+stage ('Slack notification') {
+
+
+    slackSend(channel:'#nevea', message: "Job is successful, here is the info -  Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]' (${env.BUILD_URL})")
+
+
+  }
+
 }
